--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
       padding: 10px;
     }
   </style>
+   <script src="challenge.js"></script>
+   <script src="js/index.min.js"></script>
 </head>
 <body>
   <h1>
     Welcome to the DOM Challenge
   </h1>
   <h1 id='counter'>
-    0
+  0
   </h1>
   <button id='minus' > ➖ </button>
   <button id='plus' > ➕ </button>
@@ -38,8 +40,6 @@
     </form>
 
   </div>
-
-  <script src="js/index.min.js"></script>
-  <script src="js/challenge.js"></script>
+ 
 </body>
 </html>
